--- a/regus/app/views/xrf_cocs/show.html.erb
+++ b/regus/app/views/xrf_cocs/show.html.erb
@@ -1,19 +1,19 @@
 <style>
     html, body
     {
-      height: 100%;
-      padding: 0;
-      margin: 0;
-      background: #808080
+      /*height: 100%;*/
+      /*padding: 0;*/
+      /*margin: 0;*/
+      /*background: #808080*/
     }
     .page_padding
     {
       padding-top: 2%;
       padding-bottom: 5%;
-      min-height: 100%;
-      width: 90%;
-      margin: 0 auto;
-      box-shadow: 0px 45px 50px black;
+      /*min-height: 100%;*/
+      /*width: 90%;*/
+      /*margin: 0 auto;*/
+      /*box-shadow: 0px 45px 50px black;*/
       background: white;
       overflow: hidden;
     }
