Added Mycometer CoC

--- a/regus/app/views/jobs/_cocs.html.erb
+++ b/regus/app/views/jobs/_cocs.html.erb
@@ -249,7 +249,7 @@
 					<br>
 					<div class="row">
 						<div class="large-12 columns">
-							<%= link_to "New Inspection", "#", id:"inspection3", class: "small button expanded" %>
+							<%= link_to "New Inspection", new_mycometer_coc_path(:job_id=>@job.id, :job_type=>"Inspection", :cli_type=>"Mold"), id:"inspection3", class: "small button expanded" %>
 						</div>
 					</div>
 				</div>
