--- a/regus/app/views/layouts/application.html.erb
+++ b/regus/app/views/layouts/application.html.erb
@@ -148,7 +148,8 @@
       /* */
       input#tape_bulk_coc_sample_location,
       input#xrf_coc_sample_location,
-      input#xrf_coc_sample_reading
+      input#xrf_coc_sample_reading,
+      input#mycometer_coc_reaction_time, input#mycometer_coc_liters_minute, input#mycometer_coc_duration
       {
         border-radius: 5px;
         -webkit-box-shadow: 0 8px 6px -6px lightgray;
