--- a/regus/app/views/xrf_cocs/_show.html.erb
+++ b/regus/app/views/xrf_cocs/_show.html.erb
@@ -1,7 +1,7 @@
 
 <div id="show_coc">
 
-    <div class="row">
+<!--     <div class="row">
       <div class="large-12 columns">
         <div class="lead_img">
           <%= image_tag "lead.jpg" %>
@@ -9,7 +9,7 @@
       </div>
     </div>
 
-    <br>
+    <br> -->
     
     <div class="row">
       <div class="large-12 columns">
