--- a/regus/app/views/tape_bulk_cocs/_show.html.erb
+++ b/regus/app/views/tape_bulk_cocs/_show.html.erb
@@ -1,6 +1,6 @@
 <div id="show_coc">
 
-    <div class="row">
+<!--     <div class="row">
       <div class="large-12 columns">
         <div class="lead_img">
           <%= image_tag "mold.jpg" %>
@@ -8,7 +8,7 @@
       </div>
     </div>
 
-    <br>
+    <br> -->
 
   <div class="row">
     <div class="large-12 columns">
