--- a/regus/app/views/mycometer_cocs/show.html.erb
+++ b/regus/app/views/mycometer_cocs/show.html.erb
@@ -1,69 +1,85 @@
-<p id="notice"><%= notice %></p>
+<style>
+    html, body
+    {
+      /*height: 100%;*/
+      /*padding: 0;*/
+      /*margin: 0;*/
+      /*background: #808080*/
+    }
+    .page_padding
+    {
+      padding-top: 2%;
+      padding-bottom: 5%;
+      /*min-height: 100%;*/
+      /*width: 90%;*/
+      /*margin: 0 auto;*/
+      /*box-shadow: 0px 45px 50px black;*/
+      background: white;
+      overflow: hidden;
+    }
+    h6{
+      color: black;
+    }
+</style>
 
-<p>
-  <strong>Date:</strong>
-  <%= @mycometer_coc.date %>
-</p>
 
-<p>
-  <strong>Turnaround:</strong>
-  <%= @mycometer_coc.turnaround %>
-</p>
+<!-- <div class="row"> -->
+  <div class="large-12 columns" style="padding-left: 2%; padding-right: 2%;">
+    <div class="job_type">
+      <h4 id="label_style">Signed In As: <%= current_user.fname %> <%= current_user.lname %></h4>
+    </div>
+  </div>
+<!-- </div> -->
 
-<p>
-  <strong>Mold air:</strong>
-  <%= @mycometer_coc.mold_air %>
-</p>
 
-<p>
-  <strong>Building type:</strong>
-  <%= @mycometer_coc.building_type %>
-</p>
 
-<p>
-  <strong>Sampling method:</strong>
-  <%= @mycometer_coc.sampling_method %>
-</p>
+<!-- <div class="row"> -->
+  <!-- <div class="large-12 columns"> -->
+      <div class="large-12 columns large-collapse" style="padding-top: 2%; padding-left: 5%; padding-right: 5%">
+        <div class="large-2 columns">
+            <ul class="tabs vertical" id="example-vert-tabs" data-tabs>
+                <li class="tabs-title" id="job_links"><a href="#panel1v" aria-selected="true">Job Information</a></li>
+                <li class="tabs-title" id="job_links"><a href="#panel3v">Job CoC's</a></li>
+                <li class="tabs-title is-active" id="job_links"><a href="#panel5v">Add Mold Samples</a></li>
+                <li class="tabs-title" id="job_links"><a href="#panel6v">Saved Mold Samples</a></li>
+                <li class="tabs-title" id="job_links"><a href="#panel7v">Mycometer CoC Reports</a></li>
+                <li class="tabs-title"><a href="#panel8v">New Job</a></li>
+                <li class="tabs-title"><a href="#panel9v">All Jobs</a></li>
+                <li class="tabs-title"><a href="#panel10v">All Reports</a></li>
+            </ul>
+          </div>
+          <div class="large-10 columns">
+            <div class="tabs-content vertical" data-tabs-content="example-vert-tabs">
+              <div class="tabs-panel" id="panel1v" style="border-left: solid 1px #f2f2f2">
+                <%= render 'jobs/show' %>
+              </div>
+              <div class="tabs-panel" id="panel3v" style="border-left: solid 1px #f2f2f2">
+                <%= render 'jobs/cocs' %>
+              </div>
+              <div class="tabs-panel is-active" id="panel5v" style="border-left: solid 1px #f2f2f2">
+                <%= render 'show' %>
+                <hr>
+                <%= render 'mycometer_coc_samples/form' %>
+              </div>
+              <div class="tabs-panel" id="panel6v" style="border-left: solid 1px #f2f2f2">
+                <%= render 'mycometer_cocs/samples' %>
+              </div>
+              <div class="tabs-panel" id="panel7v" style="border-left: solid 1px #f2f2f2">
 
-<p>
-  <strong>Ambient temp:</strong>
-  <%= @mycometer_coc.ambient_temp %>
-</p>
+              </div>
+              <div class="tabs-panel" id="panel8v" style="border-left: solid 1px #f2f2f2">
+                <%= render 'jobs/form' %>
+              </div> 
+              <div class="tabs-panel" id="panel9v" style="border-left: solid 1px #f2f2f2">
+                <%= render 'jobs/index' %>
+              </div> 
+              <div class="tabs-panel" id="panel10v" style="border-left: solid 1px #f2f2f2">
+                <%= render 'all_reports/index' %>
+              </div>
+            </div>
+          </div>
+      </div>
+    <!-- </div> -->
+<!-- </div> -->
 
-<p>
-  <strong>Reaction time:</strong>
-  <%= @mycometer_coc.reaction_time %>
-</p>
 
-<p>
-  <strong>Liters minute:</strong>
-  <%= @mycometer_coc.liters_minute %>
-</p>
-
-<p>
-  <strong>Duration:</strong>
-  <%= @mycometer_coc.duration %>
-</p>
-
-<p>
-  <strong>Job type:</strong>
-  <%= @mycometer_coc.job_type %>
-</p>
-
-<p>
-  <strong>Cli type:</strong>
-  <%= @mycometer_coc.cli_type %>
-</p>
-
-<p>
-  <strong>Job:</strong>
-  <%= @mycometer_coc.job %>
-</p>
-
-<p>
-  <strong>User:</strong>
-  <%= @mycometer_coc.user %>
-</p>
-
-<%= link_to 'Edit', edit_mycometer_coc_path(@mycometer_coc) %> |
-<%= link_to 'Back', mycometer_cocs_path %>
