--- a/regus/app/views/jobs/_cocs.html.erb
+++ b/regus/app/views/jobs/_cocs.html.erb
@@ -63,7 +63,7 @@
 					<div class="row">
 						<div class="large-12 columns">
 							<div class="inspection_img", id="inspection_img1">
-								<%= image_tag "inspection.jpg" %>
+								 <!-- image_tag "inspection.jpg" %> -->
 							</div>
 						</div>
 					</div>
@@ -78,7 +78,7 @@
 					<div class="row">
 						<div class="large-12 columns">
 							<div class="laboratory_img" id="laboratory_img1">
-								<%= image_tag "laboratory.jpg" %>
+								 <!-- image_tag "laboratory.jpg" %> -->
 							</div>
 						</div>
 					</div>
@@ -93,7 +93,7 @@
 					<div class="row">
 						<div class="large-12 columns">
 							<div class="clearance_img" id="clearance_img1">
-								<%= image_tag "clearance.jpg" %>
+								 <!-- image_tag "clearance.jpg" %> -->
 							</div>
 						</div>
 					</div>
