--- a/regus/app/views/layouts/application.html.erb
+++ b/regus/app/views/layouts/application.html.erb
@@ -456,19 +456,19 @@
         box-shadow: 0px 2px 6px 2px grey;
         height: 150px;
         overflow: hidden;
-        opacity: 0.75;
-         /*-webkit-mask-image:-webkit-gradient(linear, left top, left bottom, from(rgba(0,0,0,1)), to(rgba(0,0,0,0)))*/
+        /*opacity: 0.75;*/
+         /*-webkit-mask-image:-webkit-gradient(linear, left top, left bottom, from(rgba(0,0,0,1)), to(rgba(0,0,0,0.50)))*/
       }
       .laboratory_img,
       .inspection_img,
       .clearance_img
       {
         border-radius: 10px;
-        /*box-shadow: 0px 2px 6px 2px grey;*/
         height: 50px;
         overflow: hidden;
         opacity: 0.5;
-        -webkit-mask-image:-webkit-gradient(linear, left top, left bottom, from(rgba(0,0,0,1)), to(rgba(0,0,0,0.20)))
+        -webkit-mask-image:-webkit-gradient(linear, left top, left bottom, from(rgba(0,0,0,1)), to(rgba(0,0,0,0.20)));
+        box-shadow: 0px 2px 6px 2px grey;
       }
 
 </style>
