--- a/regus/app/views/layouts/application.html.erb
+++ b/regus/app/views/layouts/application.html.erb
@@ -464,11 +464,11 @@
       .clearance_img
       {
         border-radius: 10px;
-        height: 50px;
+        height: 100px;
         overflow: hidden;
         opacity: 0.5;
-        -webkit-mask-image:-webkit-gradient(linear, left top, left bottom, from(rgba(0,0,0,1)), to(rgba(0,0,0,0.20)));
-        box-shadow: 0px 2px 6px 2px grey;
+        /*-webkit-mask-image:-webkit-gradient(linear, left top, left bottom, from(rgba(0,0,0,1)), to(rgba(0,0,0,0.20)));*/
+        /*box-shadow: 0px 2px 6px 2px grey;*/
       }
 
 </style>
